Fixed misalignment giorno 12px

--- a/styles.css
+++ b/styles.css
@@ -833,6 +833,15 @@ footer .social-links a:hover {
             margin: 0;
         }
 
+        .width-giorno {
+            margin: 0;
+        }
+
+        .left-12 {
+            left: 12px;
+            position: relative;
+        }
+
         .e-poi-collage {
             max-width: 100%;
         }
